--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "Pralad Neupane",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.15.2",
+    "axios": ">=0.21.1",
     "css-loader": "^0.26.0",
     "express": "^4.13.4",
     "foundation-sites": "^6.2.4",
