--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.16.0",
     "node-sass": "^3.13.0",
-    "sass-loader": "^4.0.2",
+    "node-sass": ">=4.13.1",
     "webpack": "^1.12.13"
   }
 }
